--- a/src/app/auth/pages/login/login.page.html
+++ b/src/app/auth/pages/login/login.page.html
@@ -1,9 +1,9 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content padding>
+  <h1 text-center>
+    <ion-icon name="done-all" color="primary" class="icon-7em"></ion-icon>
+  </h1>
 
-<ion-content>
-
+  <ion-item>
+    <ion-icon name="mail" color="primary" slot="start"></ion-icon>
+  </ion-item>
 </ion-content>
